--- a/app/components/Home/Business/index.module.css
+++ b/app/components/Home/Business/index.module.css
@@ -13,10 +13,10 @@
 
 .intro {
   display: none;
-  background-color: rgb(248, 248, 248);
+  background-color: rgba(248, 248, 248, 0.563);
   font-weight: 700;
   color: rgb(184, 30, 148);
-  border-radius: 20px;
+  border-radius: 5px;
 }
 
 .introMobile {
@@ -24,7 +24,7 @@
   background-color: rgb(248, 248, 248);
   font-weight: 700;
   color: rgb(184, 30, 148);
-  border-radius: 20px;
+  border-radius: 5px;
 }
 
 .heading h1 {
@@ -54,6 +54,7 @@
     rgb(173, 33, 141)
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
+   border-radius: 5px;
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
@@ -107,7 +108,6 @@
   .btn button {
     padding: 10px 0 10px 0;
     width: 90vw;
-    border-radius: 30px;
     font-size: 1em;
     background-color: rgb(184, 30, 148);
   }
@@ -165,7 +165,6 @@
   .btn button {
     padding: 10px 0 10px 0;
     width: 90vw;
-    border-radius: 30px;
     font-size: 1em;
     background-color: rgb(184, 30, 148);
   }
@@ -222,7 +221,6 @@
   .btn button {
     padding: 10px 0 10px 0;
     width: 90vw;
-    border-radius: 30px;
     font-size: 1em;
     background-color: rgb(184, 30, 148);
   }
@@ -280,7 +278,6 @@
   .btn button {
     padding: 10px 0 10px 0;
     width: 50vw;
-    border-radius: 30px;
     font-size: 1em;
     background-color: rgb(184, 30, 148);
   }
@@ -335,7 +332,6 @@
     padding: 10px 0 10px 0;
     width: 14.5vw;
     margin: 20px 0 10px 0;
-    border-radius: 30px;
     font-size: 1em;
   }
 
@@ -404,7 +400,6 @@
     padding: 15px 20px 15px 20px;
     width: 12vw;
     margin: 20px 0 10px 0;
-    border-radius: 10px;
     font-size: 1em;
     font-weight: 700;
   }
