--- a/app/components/Home/Services/index.module.css
+++ b/app/components/Home/Services/index.module.css
@@ -42,9 +42,9 @@
 }
 
 .servicesListGrid h1 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 700;
-  color: #4b494b;
+  color: #4b4b4b;
 }
 
 .servicesListGrid p {
@@ -174,7 +174,7 @@
   }
 
   .serviceIntro h1 {
-    font-size: 3.5em;
+    font-size: 3.3em;
     padding: 0 0 10px 0;
   }
 
