--- a/app/(pages)/FAQs/components/Section/index.module.css
+++ b/app/(pages)/FAQs/components/Section/index.module.css
@@ -8,6 +8,22 @@
   color: black;
 }
 
+.tab {
+  width: 100%;
+}
+
+.tab button {
+  border: solid 1px transparent;
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+  color: rgb(184, 30, 148);
+  font-weight: bold;
+}
+
+.tab button:hover {
+  border: solid 1px rgba(179, 179, 179, 0.259);
+}
+
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .section {
@@ -39,21 +55,30 @@
     line-height: 2;
   }
 
-  
-  .alert{
-     padding: 100px 0 200px 0;
+  .alert {
+    padding: 100px 0 200px 0;
   }
-  
-  .alert img{
+
+  .alert img {
     width: 75%;
     margin: auto;
   }
 
+  .tab {
+    width: 100%;
+    margin: auto;
+    text-align: start;
+    margin: 0 0 50px 0;
+  }
+  .tab button {
+    margin-right: 5px;
+    font-size: 0.8rem;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
- .section {
+  .section {
     padding: 50px 20px 100px 20px;
   }
 
@@ -82,20 +107,31 @@
     line-height: 2;
   }
 
-  .alert{
-     padding: 100px 0 200px 0;
+  .alert {
+    padding: 100px 0 200px 0;
   }
-  
-  .alert img{
+
+  .alert img {
     width: 75%;
     margin: auto;
   }
 
+  .tab {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    margin: 0 0 50px 0;
+  }
+  .tab button {
+    margin-right: 1px;
+    font-size: 1rem;
+    border: solid 1px rgba(179, 179, 179, 0.259);
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
- .section {
+  .section {
     padding: 50px 20px 100px 20px;
   }
 
@@ -124,13 +160,24 @@
     line-height: 2;
   }
 
-  .alert{
-     padding: 100px 0 200px 0;
+  .alert {
+    padding: 100px 0 200px 0;
   }
-  
-  .alert img{
+
+  .alert img {
     width: 60%;
     margin: auto;
+  }
+  .tab {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    margin: 0 0 50px 0;
+  }
+  .tab button {
+    margin-right: 5px;
+    font-size: 1.1rem;
+    border: solid 1px rgba(179, 179, 179, 0.259);
   }
 }
 
@@ -165,24 +212,35 @@
     line-height: 2;
   }
 
-  .alert{
-     padding: 100px 0 200px 0;
+  .alert {
+    padding: 100px 0 200px 0;
   }
-  
-  .alert img{
+
+  .alert img {
     width: 40%;
     margin: auto;
+  }
+  .tab {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    margin: 0 0 50px 0;
+  }
+  .tab button {
+    margin-right: 10px;
+    font-size: 1.5rem;
+    border: solid 1px rgba(179, 179, 179, 0.259);
   }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
   .section {
-    padding: 50px 20px 100px 20px;
+    padding: 30px 20px 100px 20px;
   }
 
   .sectionContext {
-    padding: 50px 20px 100px 20px;
+    padding: 30px 20px 100px 20px;
     width: 80%;
     height: 50%;
     margin: auto;
@@ -201,15 +259,25 @@
     line-height: 2;
   }
 
-  .alert{
-     padding: 100px 0 200px 0;
+  .alert {
+    padding: 100px 0 200px 0;
   }
-  
-  .alert img{
+
+  .alert img {
     width: 25%;
     margin: auto;
   }
-
+  .tab {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    margin: 0 0 50px 0; 
+  }
+  .tab button {
+    margin-right: 5px;
+    font-size: 1.2rem;
+    border: solid 1px rgba(179, 179, 179, 0.259);
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
@@ -237,13 +305,24 @@
     font-weight: 600;
     line-height: 2;
   }
-  
-  .alert{
-     padding: 100px 0 200px 0;
+
+  .alert {
+    padding: 100px 0 200px 0;
   }
 
-  .alert img{
+  .alert img {
     width: 25%;
     margin: auto;
+  }
+   .tab {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    margin: 0 0 50px 0; 
+  }
+  .tab button {
+    margin-right: 5px;
+    font-size: 1.5rem;
+    border: solid 1px rgba(179, 179, 179, 0.259);
   }
 }
