--- a/app/(pages)/FAQs/components/Section/index.css
+++ b/app/(pages)/FAQs/components/Section/index.css
@@ -1,4 +1,3 @@
-
 summary {
   position: relative;
 }
@@ -11,7 +10,7 @@ details {
   margin: 0 0 20px 0;
   transition: 100ms;
   color: rgb(184, 30, 148);
-  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 details[open] {
@@ -27,55 +26,49 @@ summary {
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
-    
- 
   summary {
-    padding: 1.1rem 1em 1.1rem 0;
-    font-size: 0.8rem;
+    padding: 1.1rem 0 1.1rem 0;
+    font-size: 0.9rem;
   }
   details {
     padding: 0 1rem;
-     font-size: 0.9rem;
+    font-size: 0.9rem;
   }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
-    
-
   summary {
-    padding: 1.1rem 1em 1.1rem 0;
-    font-size: 0.9rem;
+    padding: 1.1rem 0 1.1rem 0;
+    font-size: 1rem;
   }
   details {
     padding: 0 1.5rem;
-     font-size: 0.9rem;
+    font-size: 0.9rem;
   }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
-    
-
   summary {
-    padding: 1.1rem 2em 1.1rem 0;
-    font-size: 1rem;
+    padding: 1.1rem 0 1.1rem 0;
+    font-size: 1.1rem;
   }
   details {
     padding: 0 1.4rem;
-     font-size: 0.9rem;
+    font-size: 0.9rem;
   }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
   summary {
-    padding: 1.1rem 1em 1.1rem 0;
-    font-size: 1.2rem;
+    padding: 1.1rem 0 1.1rem 0;
+    font-size: 1.3rem;
   }
   details {
     padding: 0 2.5rem;
-     font-size: 1rem;
+    font-size: 1rem;
   }
 }
 
@@ -87,7 +80,7 @@ summary {
   }
   details {
     padding: 0 2.5rem;
-     font-size: 1rem;
+    font-size: 1rem;
   }
 }
 
