--- a/app/(pages)/FAQs/components/Section/index.module.css
+++ b/app/(pages)/FAQs/components/Section/index.module.css
@@ -63,11 +63,11 @@
   .tab {
     width: 100%;
     margin: auto;
-    text-align: start;
+     text-align: center;
     margin: 0 0 50px 0;
   }
     .tab button {
-    font-size: 0.8rem;
+    font-size: 1.1rem;
   }
 }
 
@@ -114,11 +114,11 @@
   .tab {
     width: 100%;
     margin: auto;
-    text-align: start;
+    text-align: center;
     margin: 0 0 50px 0;
   }
   .tab button {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 }
 
