--- a/app/components/Home/Business/index.module.css
+++ b/app/components/Home/Business/index.module.css
@@ -55,6 +55,7 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
    border-radius: 5px;
+   font-weight: 500;
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
