--- a/app/(pages)/FAQs/components/Section/index.module.css
+++ b/app/(pages)/FAQs/components/Section/index.module.css
@@ -17,7 +17,7 @@
   padding: 5px 10px 5px 10px;
   color: rgb(184, 30, 148);
   font-weight: bold;
-    border: solid 1px rgba(179, 179, 179, 0.259);
+    border: solid 1px #F4F2FB;
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
