--- a/app/(pages)/FAQs/components/Section/index.module.css
+++ b/app/(pages)/FAQs/components/Section/index.module.css
@@ -268,6 +268,7 @@
     .tab button {
     font-size: 1.2rem;
     border: solid 1px rgba(179, 179, 179, 0.259);
+     border-radius: 5px;
   }
 }
 
@@ -314,5 +315,6 @@
     .tab button {
     font-size: 1.5rem;
     border: solid 1px rgba(179, 179, 179, 0.259);
+    border-radius: 5px;
   }
 }
