--- a/app/globals.css
+++ b/app/globals.css
@@ -43,3 +43,9 @@ a {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+#loader{
+  width: 100%;
+  margin: auto;
+  text-align: center;
+}
