--- a/app/globals.css
+++ b/app/globals.css
@@ -44,8 +44,8 @@ a {
   background: #555;
 }
 
-#loader{
-  width: 100%;
-  margin: auto;
-  text-align: center;
+@media (max-width: 1023px) {
+  .disable-scroll {
+    overflow-y: hidden;
+  }
 }
