--- a/app/(pages)/help-center/components/Section/index.module.css
+++ b/app/(pages)/help-center/components/Section/index.module.css
@@ -17,9 +17,11 @@
   padding: 5px 10px 5px 10px;
   color: rgb(184, 30, 148);
   font-weight: bold;
-    border: solid 1px #F4F2FB;
 }
 
+.tab button:hover {
+  border: solid 1px #c9c6d7;
+}
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .section {
@@ -63,10 +65,10 @@
   .tab {
     width: 100%;
     margin: auto;
-     text-align: center;
+    text-align: center;
     margin: 0 0 50px 0;
   }
-    .tab button {
+  .tab button {
     font-size: 1.2rem;
   }
 }
@@ -167,7 +169,7 @@
     text-align: center;
     margin: 0 0 50px 0;
   }
-    .tab button {
+  .tab button {
     font-size: 1.3rem;
     border: solid 1px rgba(179, 179, 179, 0.259);
   }
@@ -263,12 +265,12 @@
     width: 100%;
     margin: auto;
     text-align: center;
-    margin: 0 0 50px 0; 
+    margin: 0 0 50px 0;
   }
-    .tab button {
+  .tab button {
     font-size: 1.2rem;
     border: solid 1px rgba(179, 179, 179, 0.259);
-     border-radius: 5px;
+    border-radius: 5px;
   }
 }
 
@@ -306,13 +308,13 @@
     width: 25%;
     margin: auto;
   }
-   .tab {
+  .tab {
     width: 100%;
     margin: auto;
     text-align: center;
-    margin: 0 0 50px 0; 
+    margin: 0 0 50px 0;
   }
-    .tab button {
+  .tab button {
     font-size: 1.5rem;
     border: solid 1px rgba(179, 179, 179, 0.259);
     border-radius: 5px;
