--- a/app/(pages)/help-center/components/Section/index.module.css
+++ b/app/(pages)/help-center/components/Section/index.module.css
@@ -121,6 +121,7 @@
   }
   .tab button {
     font-size: 1.3rem;
+    border-radius: 5px;
   }
 }
 
@@ -172,6 +173,7 @@
   .tab button {
     font-size: 1.3rem;
     border: solid 1px rgba(179, 179, 179, 0.259);
+    border-radius: 5px;
   }
 }
 
@@ -224,6 +226,7 @@
     margin-right: 10px;
     font-size: 1.5rem;
     border: solid 1px rgba(179, 179, 179, 0.259);
+    border-radius: 5px;
   }
 }
 
