--- a/app/(pages)/help-center/components/Section/index.module.css
+++ b/app/(pages)/help-center/components/Section/index.module.css
@@ -13,10 +13,11 @@
 }
 
 .tab button {
-  border: solid 1px transparent;
   padding: 5px 10px 5px 10px;
   color: rgb(184, 30, 148);
   font-weight: bold;
+   border: solid 1px rgba(179, 179, 179, 0.259);
+   margin-right: 10px;
 }
 
 .tab button:hover {
@@ -172,7 +173,7 @@
   }
   .tab button {
     font-size: 1.3rem;
-    border: solid 1px rgba(179, 179, 179, 0.259);
+
     border-radius: 5px;
   }
 }
@@ -225,7 +226,7 @@
   .tab button {
     margin-right: 10px;
     font-size: 1.5rem;
-    border: solid 1px rgba(179, 179, 179, 0.259);
+
     border-radius: 5px;
   }
 }
@@ -272,7 +273,7 @@
   }
   .tab button {
     font-size: 1.2rem;
-    border: solid 1px rgba(179, 179, 179, 0.259);
+
     border-radius: 5px;
   }
 }
@@ -319,7 +320,7 @@
   }
   .tab button {
     font-size: 1.5rem;
-    border: solid 1px rgba(179, 179, 179, 0.259);
+
     border-radius: 5px;
   }
 }
