--- a/app/(pages)/about-us/components/Banner/index.module.css
+++ b/app/(pages)/about-us/components/Banner/index.module.css
@@ -12,6 +12,8 @@
 
 .bannerContext h1 {
   color: rgb(184, 30, 148);
+  padding: 0 0 10px 0;
+  line-height: normal;
 }
 
 .bannerContext p{
@@ -34,7 +36,7 @@
   }
 
   .bannerContext h1 {
-    font-size: 2em;
+    font-size: 1.9em;
     font-weight: 600;
   }
 
@@ -51,21 +53,20 @@
   }
 
   .bannerContext {
-    padding: 100px 10px 100px 10px;
+    padding: 100px 2px 100px 2px;
     width: 100%;
-    height: 50%;
     margin: auto;
     border-radius: 10px;
     text-align: center;
   }
 
   .bannerContext h1 {
-    font-size: 2.5em;
+    font-size: 2.2em;
     font-weight: 600;
   }
 
   .bannerContext p {
-    font-size: 0.9em;
+    font-size: 1rem;
     font-weight: 600;
   }
 }
@@ -86,7 +87,7 @@
   }
 
   .bannerContext h1 {
-    font-size: 2.9em;
+    font-size: 2.5em;
     font-weight: 600;
   }
 
