--- a/app/(pages)/about-us/components/Section/index.module.css
+++ b/app/(pages)/about-us/components/Section/index.module.css
@@ -6,6 +6,7 @@
 
 .sectionContext {
   display: grid;
+   gap: 30px;
 }
 
 .sectionContext h1 {
@@ -25,7 +26,6 @@
   .sectionContext {
     padding: 25px 0 40px 0;
     width: 100%;
-    height: 50%;
     margin: auto;
     text-align: start;
   }
@@ -36,7 +36,7 @@
   }
 
   .sectionContext h1 {
-    font-size: 1.4em;
+    font-size: 1.8rem;
     font-weight: 700;
     padding: 30px 0 5px 0;
   }
@@ -66,7 +66,6 @@
   .sectionContext {
     padding: 25px 0 40px 0;
     width: 100%;
-    height: 50%;
     margin: auto;
     text-align: start;
   }
@@ -77,13 +76,13 @@
   }
 
   .sectionContext h1 {
-    font-size: 1.4em;
+    font-size: 2rem;
     font-weight: 700;
     padding: 30px 0 5px 0;
   }
 
   .sectionContext p {
-    font-size: 1em;
+    font-size: 1rem;
     font-weight: 600;
     line-height: 2;
   }
@@ -107,7 +106,6 @@
   .sectionContext {
     padding: 25px 0 40px 0;
     width: 100%;
-    height: 50%;
     margin: auto;
     text-align: start;
   }
@@ -118,7 +116,7 @@
   }
 
   .sectionContext h1 {
-    font-size: 1.4em;
+    font-size: 2rem;
     font-weight: 700;
     padding: 30px 0 5px 0;
   }
@@ -148,7 +146,6 @@
   .sectionContext {
     padding: 25px 20px 40px 20px;
     width: 100%;
-    height: 50%;
     margin: auto;
     text-align: start;
   }
@@ -159,7 +156,7 @@
   }
 
   .sectionContext h1 {
-    font-size: 1.4em;
+    font-size: 2rem;
     font-weight: 700;
     padding: 30px 0 5px 0;
   }
@@ -189,7 +186,6 @@
   .sectionContext {
     padding: 20px 20px 90px 20px;
     width: 80%;
-    gap: 30px;
     margin: auto;
     text-align: start;
   }
@@ -216,7 +212,6 @@
   .sectionContext {
     padding: 50px 20px 100px 20px;
     width: 80%;
-    gap: 30px;
     margin: auto;
     text-align: start;
   }
