--- a/app/(pages)/business/components/Section/index.module.css
+++ b/app/(pages)/business/components/Section/index.module.css
@@ -11,11 +11,11 @@
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .section {
-    padding: 50px 15px 100px 15px;
+    padding: 50px 15px 50px 15px;
   }
 
   .sectionContext {
-    padding: 25px 0 40px 0;
+    padding: 0;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -54,11 +54,11 @@
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
  .section {
-    padding: 50px 20px 100px 20px;
+   padding: 50px 15px 50px 15px;
   }
 
   .sectionContext {
-    padding: 25px 0 40px 0;
+    padding: 0;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -96,11 +96,11 @@
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
  .section {
-    padding: 50px 20px 100px 20px;
+   padding: 50px 15px 50px 15px;
   }
 
   .sectionContext {
-    padding: 25px 0 40px 0;
+    padding: 0;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -137,11 +137,11 @@
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
   .section {
-    padding: 50px 20px 100px 20px;
+   padding: 50px 15px 50px 15px;
   }
 
   .sectionContext {
-    padding: 25px 20px 40px 20px;
+    padding: 0;
     width: 100%;
     height: 50%;
     margin: auto;
