--- a/app/components/Home/Hero/index.module.css
+++ b/app/components/Home/Hero/index.module.css
@@ -79,11 +79,11 @@
   }
 
   .Hero p {
-    font-size: 1em;
+    font-size: 1rem;
   }
 
   .Hero h1 {
-    font-size: 9vw;
+    font-size: 8.9vw;
     padding: 10px 0 20px 0;
   }
 
