--- a/app/components/Home/Business/index.module.css
+++ b/app/components/Home/Business/index.module.css
@@ -21,12 +21,15 @@
 
 .introMobile {
   display: none;
-  background-color: rgb(248, 248, 248);
+}
+
+.introMobileBg {
+ background-color: rgba(248, 248, 248, 0.563);
   font-weight: 700;
   color: rgb(184, 30, 148);
   border-radius: 5px;
+  padding: 5px 20px 5px 20px;
 }
-
 .heading h1 {
   font-weight: 700;
   line-height: normal;
@@ -54,8 +57,8 @@
     rgb(173, 33, 141)
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
-   border-radius: 5px;
-   font-weight: 500;
+  border-radius: 5px;
+  font-weight: 500;
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
@@ -133,7 +136,7 @@
 
   .introMobile {
     display: inline-block;
-    padding: 5px 20px 5px 20px;
+
     width: 100%;
     text-align: center;
     font-size: 1.1em;
@@ -251,7 +254,7 @@
   .introMobile {
     display: inline-block;
     padding: 5px 20px 5px 20px;
-    width: 50%;
+    width: 100%;
     margin: auto;
     text-align: center;
     font-size: 1.1em;
