--- a/app/(pages)/terms/components/Banner/index.module.css
+++ b/app/(pages)/terms/components/Banner/index.module.css
@@ -5,16 +5,16 @@
 }
 
 .bannerContext {
-  background-color: #F4F2FB;
+  background-color: #f4f2fb;
   background-repeat: no-repeat;
-  background-size: cover; 
+  background-size: cover;
 }
 
 .bannerContext h1 {
   color: rgb(184, 30, 148);
 }
 
-.bannerContext p{
+.bannerContext p {
   color: #505050;
 }
 
