--- a/app/components/Header/Nav/index.module.css
+++ b/app/components/Header/Nav/index.module.css
@@ -32,7 +32,7 @@
   display: flex;
   cursor: pointer;
   position: relative;
-  white-space: nowrap;
+  white-space: normal;
   gap: 5px;
   padding: 0 0 4px 0;
 }
