--- a/app/(pages)/business/lib/Banner/index.module.css
+++ b/app/(pages)/business/lib/Banner/index.module.css
@@ -41,7 +41,7 @@
   }
 
   .heroBg {
-    text-align: start;
+    text-align: center;
     padding: 0;
   }
 
@@ -111,7 +111,7 @@
   }
 
   .heroBg {
-    text-align: start;
+     text-align: center;
     padding: 0;
   }
 
@@ -181,7 +181,7 @@
   }
 
   .heroBg {
-    text-align: start;
+     text-align: center;
     padding: 0;
   }
 
@@ -321,7 +321,7 @@
   }
 
   .heroBg {
-    text-align: start;
+     text-align: start;
     padding: 60px 0 40px 0;
   }
 
@@ -396,7 +396,7 @@
   }
 
   .heroBg {
-    text-align: start;
+     text-align: start;
     padding: 100px 0 0 0;
   }
 
